--- a/style.css
+++ b/style.css
@@ -462,11 +462,11 @@
     width: 100%;
     background-color: #988;
     color: black;
-    padding-top: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    justify-content: center;
+    padding-top: 35px;
     clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0 100%);
     text-align: center;
 }
